# memgram

./: .gitignore  INSTRUCTIONS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: _config.yml  architecture.md  getting-started.md  index.md
docs/_layouts/: default.html
docs/concepts/: index.md  knowledge-graph.md  normalization.md  scoping.md  scoring.md
docs/configuration/: cli.md  index.md  mcp-clients.md
docs/data-model/: index.md  schema.md
docs/guides/: ai-instructions.md  branch-workflow.md  export.md  index.md  session-workflow.md
docs/tools/: attachments.md  audit.md  builds.md  comments.md  components.md  credentials.md  decisions.md  dependencies.md  deployments.md  diagrams.md  endpoints.md  environments.md  features.md  groups.md  incidents.md  index.md  instructions.md  knowledge.md  maintenance.md  people.md  plans.md  projects.md  runbooks.md  search.md  sessions.md  specs.md  teams.md  tickets.md
src/memgram/: __init__.py  export.py  models.py  server.py  utils.py
src/memgram/db/: __init__.py  base.py  sqlite.py
src/memgram/tools/: __init__.py  attachments.py  audit.py  builds.py  comments.py  components.py  credentials.py  decisions.py  dependencies.py  deployments.py  diagrams.py  endpoints.py  environments.py  features.py  health.py  incidents.py  instructions.py  knowledge.py  people.py  plans.py  runbooks.py  search.py  sessions.py  specs.py  teams.py  tickets.py
tests/: test_memgram.py
